# elements-of-style-lessons

./: .gitignore  LICENSE  README.md  environment.yml  eos.yml  main-bulk-de.nf  main-geo-to-h5ad.nf  main-hello-py-greet.nf  main-hello-r-greet.nf  main-limma-voom-contrasts.nf  main-limma-voom-fit-lm.nf  main-limma-voom-make-design.nf  main-limma-voom-prep-counts.nf  main-limma-voom-run-voom.nf  main-scanpy-qc-convert.nf  main-scanpy-qc-qc.nf  nextflow.config  pyproject.toml
.github/workflows/: docs.yml
case-studies/: README.md
case-studies/endometriosis/: README.md
case-studies/multiqc-workflow/: README.md
case-studies/nlm-ckn/: README.md
case-studies/oadr-autoantibody/: README.md
case-studies/oadr-cpep/: README.md
command-line-and-git-bash/eye-candy/: python.ipynb
command-line-and-git-bash/notebooks/: python.ipynb
conda-environments/eye-candy/: python.ipynb
conda-environments/notebooks/: r.ipynb
configs/: docker.config  lifebit.config  test.config
container/: README.md
container/hello-py/: Dockerfile
container/hello-r/: Dockerfile
container/limma-voom/: Dockerfile
container/mcp-nsforest-server/: Dockerfile
container/scanpy-qc/: Dockerfile
containers/: README.md
containers/notebooks/: python.ipynb  r.ipynb
data/: README.md
docs/: Makefile
docs/source/: conf.py  index.md
federated-computing/: README.md
federated-computing/eye-candy/: python.ipynb
federated-computing/notebooks/: python.ipynb  r.ipynb
federated-learning/eye-candy/: python.ipynb
federated-learning/notebooks/: python.ipynb  r.ipynb
interactive-computing/: README.md
interactive-computing/eye-candy/: python.ipynb  r.ipynb
interactive-computing/notebooks/: r.ipynb
introduction/: README.md
lessons/agentic-harness/: README.md  wiring-a-claude-code-loop.ipynb  wiring-a-claude-code-loop.md
lessons/command-line-and-git-bash/: README.md  using-the-command-line.ipynb  using-the-command-line.md
lessons/conda-environments/: README.md  creating-a-conda-environment.ipynb  creating-a-conda-environment.md  recap-workspace-setup.ipynb  recap-workspace-setup.md
lessons/containers/: README.md  building-an-r-dockerfile.ipynb  building-an-r-dockerfile.md  building-dockerfiles.ipynb  building-dockerfiles.md
lessons/continuous-integration/: README.md  add-a-first-ci-job.ipynb  add-a-first-ci-job.md  github-actions-for-maintenance-testing.ipynb  github-actions-for-maintenance-testing.md
lessons/documentation/: README.md  building-a-sphinx-site.ipynb  building-a-sphinx-site.md
lessons/elements-of-style-rules/: README.md  a-few-simple-rules.ipynb  a-few-simple-rules.md
lessons/federated-computing/: README.md  simulating-a-3x3-federated-run.ipynb  simulating-a-3x3-federated-run.md
lessons/federated-learning/: README.md  median-of-coefficients-aggregation.ipynb  median-of-coefficients-aggregation.md
lessons/interactive-computing/: README.md  exploring-an-r-notebook.ipynb  exploring-an-r-notebook.md  running-a-jupyterlab-notebook.ipynb  running-a-jupyterlab-notebook.md  starting-a-jupyter-lab-notebook.ipynb  starting-a-jupyter-lab-notebook.md
lessons/introduction/: README.md  lets-dive-in.ipynb  lets-dive-in.md  pre-training.ipynb  pre-training.md
lessons/mcp-server/: README.md  wrap-a-typer-cli-as-an-mcp-server.ipynb  wrap-a-typer-cli-as-an-mcp-server.md
lessons/nextflow-modules/: README.md  preamble.ipynb  preamble.md
lessons/nextflow-workflows/: README.md  building-a-cwl-workflow.ipynb  building-a-cwl-workflow.md  building-a-nextflow-workflow.ipynb  building-a-nextflow-workflow.md  shared-structure-nextflow-vs-cwl.ipynb  shared-structure-nextflow-vs-cwl.md
lessons/publishing-for-agents/: README.md  exposing-help-and-schema.ipynb  exposing-help-and-schema.md
lessons/reusable-clis/: README.md  rscript-cli-in-fifteen-minutes.ipynb  rscript-cli-in-fifteen-minutes.md  typer-cli-in-fifteen-minutes.ipynb  typer-cli-in-fifteen-minutes.md
lessons/version-control/: README.md  git-survival-guide.md  github-authenticate.ipynb  github-authenticate.md  keeping-your-repository-fork-in-sync.ipynb  keeping-your-repository-fork-in-sync.md  the-add-push-git-routine.ipynb  the-add-push-git-routine.md  why-git-and-setup.ipynb  why-git-and-setup.md  workspace-setup.ipynb  workspace-setup.md
mcp-server/eye-candy/: r.ipynb
mcp-server/notebooks/: r.ipynb
modules/: README.md
modules/hello-py/: greet.nf
modules/hello-r/: greet.nf
modules/limma-voom/: contrasts.nf  fit_lm.nf  make_design.nf  prep_counts.nf  (+1 more)
reusable-clis/: README.md
scripts/: README.md
version-control/: README.md
(+198 files in other folders)
