[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elements-of-style-lessons"
version = "0.1.0"
description = "Companion to \"Elements of Style in Creating Workflows for Biomedical Research in the Era of Agentic AI\" by Anne Deslattes Mays."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Anne Deslattes Mays" },
]
keywords = [
  "biomedical", "bioinformatics", "training",
  "nextflow", "typer", "mcp", "agentic-ai",
  "single-cell", "federated-computing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "typer>=0.9",
]

[project.optional-dependencies]
docs = [
  "sphinx>=7,<7.3",
  "sphinx-rtd-theme",
  "myst-parser>=2,<4",
  "myst-nb<1.2",
  "sphinx-copybutton",
  "sphinx-design",
  "linkify-it-py",
]

[project.urls]
Homepage    = "https://science-and-technology-consulting-llc.github.io/elements-of-style-lessons/"
Repository  = "https://github.com/Science-and-Technology-Consulting-LLC/elements-of-style-lessons"

# Console scripts.
# Each entry points at a Python CLI source living inside its container's
# context/src/<name>_cli/. Install editable from repo root:
#   pip install -e container/hello-py/context
#   pip install -e container/scanpy-qc/context
#   pip install -e container/mcp-nsforest-server/context
# (R containers — hello-r, limma-voom — aren't pip-installable; they're
#  built directly into their Docker images.)
#
# These scripts entry-points are referenced here as a manifest for what
# CLIs the repo ships. Each container's context/setup.py is the actual
# installer.
[project.scripts]
# (intentionally empty at root — install each container as a sub-package)

[tool.setuptools.packages.find]
# Don't discover Python packages from the repo root; each container ships
# its own setup.py.
where = ["src"]
exclude = ["*"]
